--- a/muhamad-fachrif/package.json
+++ b/muhamad-fachrif/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "muhamad-fachrif",
+  "name": "project-pwl-202310065",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,7 +12,7 @@
     "react-bootstrap": "^2.7.2",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
